k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-cicd
  namespace: devops

spec:

  replicas: 3

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: devops-cicd

  template:

    metadata:
      labels:
        app: devops-cicd

    spec:

      containers:

        - name: web

          image: pradeepnayak07/kubernetes-devops-platform:1

          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:

            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 10
            periodSeconds: 20
