k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-cicd-service
  namespace: devops

spec:

  type: ClusterIP

  selector:
    app: devops-cicd

  ports:

    - name: http

      protocol: TCP

      port: 80

      targetPort: 80
