k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-cicd-ingress
  namespace: devops

  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"

spec:

  ingressClassName: nginx

  rules:

    - http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: devops-cicd-service

                port:
                  number: 80
